--- a/Contents/Selfie/index.html
+++ b/Contents/Selfie/index.html
@@ -45,11 +45,11 @@
 
 <header >
 	<div class="logo">
-      <img src="../../assets/logo.png" onclick="FC_ContentsCall('BackPhoto')">
+      <img src="../../assets/logo.png" onclick="FC_ContentsCall('Home')">
     </div>
 </header>
 <nav>
-	<img src="../../assets/icons/home.png" class="img-home" onclick="FC_ContentsCall('BackPhoto')">
+	<img src="../../assets/icons/home.png" class="img-home" onclick="FC_ContentsCall('Home')">
 </nav>
 
 	<div id="wrapper">
