--- a/Contents/PrizeWheel/index.html
+++ b/Contents/PrizeWheel/index.html
@@ -229,7 +229,7 @@
                         .attr("fill", "#111");
                     //populate question
                     d3.select("#question h1")
-                        .text("Congratulations! You won " + data[picked].question);
+                        .text("Congratulations! You won a " + data[picked].question);
                         //data[picked].value=data[picked].value-1;
                         //alert(data[picked].value);
                         var temp=getIndex(data[picked].value);
