--- a/Contents/Website/index.html
+++ b/Contents/Website/index.html
@@ -23,17 +23,17 @@
 </head>
 
 <body onload="" onbeforeunload="JSUnload()" ondragstart="return false;" ondrop="return false;"  oncontextmenu="return false;" style="-ms-user-select:none;padding: 0; margin: 0; background-repeat: no-repeat; width: 1080px; height: 1920px; " class="noselect unselectable">
-<header>
+<!--<header>
   <div class="logo" src onclick="FC_ContentsCall('Home')">
     <img src="../../assets/logo.png">
   </div>
-</header>
+</header>-->
 <nav>
   <img src="../../assets/icons/home.png" class="img-home" onclick="FC_ContentsCall('Home')">
 </nav>
 <section class="main-content">
    <!--<h1 class="title">Website</h1>-->
-<iframe id="volframe" src="https://voyagercameras.com/" name="myFrame" target="myFrame" width="1080" height="1070"></iframe>
+<iframe id="volframe" src="https://voyagercameras.com/" name="myFrame" target="myFrame" width="1080" height="1370"></iframe>
 </section>
 <footer>
 
@@ -66,7 +66,7 @@
 
 <style type="text/css">
   .main-content {
-    height: 1070px;
+    height: 1370px;
 }
 .navigation {
     width: 100%;
