--- a/Contents/Quiz/index.html
+++ b/Contents/Quiz/index.html
@@ -50,19 +50,19 @@
    <h1 class="title">How good is your driving?
 </h1>
 <main>
-  <form onsubmit="return formSubmit();" id="gameform" method="POST" action=""  >
+  <form onsubmit="return formSubmit();" id="gameform" name="gameform" method="POST" action=""  >
 
     <div class="tab1 tab-panel">
         <div class="inputHead">Please sign up to play game</div>
       <div class="qcont">
         <div class="inputgroup">
-        <label style="margin-right: 33px;">Name </label><input id="name" type="text" name="username" value="" required="">
+        <label style="margin-right: 25px;">Name</label><input id="name" type="text" name="username" value="" required="">
        </div>
        <div class="inputgroup">
              <label>Email </label>
              <input type="email" id="email" name="email" value="" required="">
        </div>
-       <button id="SignUppGame" type="button">Sign Up T Play</button>
+       <button id="SignUppGame" type="button">Sign Up To Play</button>
       </div>
     </div>
 
@@ -263,7 +263,7 @@
         </label>
 
         <label class="labelcontainer">Option4
-             <input type="radio" name="q1" value="3" class="q7">
+             <input type="radio" name="q7" value="3" class="q7">
              <span class="checkmark Q7D"></span>
         </label>
       </div>
@@ -448,7 +448,7 @@
           ]
         }
     });
-    });1
+    });
    
 </script>
 
