--- a/Contents/Videos/index.html
+++ b/Contents/Videos/index.html
@@ -89,7 +89,7 @@
         }
         var vid1 = document.getElementById('vid1');
 
-        vid1.src="videos/" + i + ".mp4"; 
+        vid1.src="videos/" + i + ".mov"; 
         document.getElementById('myVideo').load();
         var button = document.getElementById("playPause");
         button.src="images/play.png";
